--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Richard Feynman
-email: richard@university.edu
-description: Academic webpage of Dr. Richard Feynman
+title: ParacosmCraft
+email: amgadphys@gmail.com
+description: AI for science Research Group
 baseurl: ""
 url: ""
 
@@ -12,24 +12,24 @@ url: ""
 
 # Footer info
 affiliation: >
-    Richard Feynman<br/>
-    Professor of Physics<br/>
-    California Institute of Technology
+    Amgad Abdallah Mahmoud<br/>
+    Masters in Data Science<br/>
+    The British University in Egypt
 
 location: >
-  California Institute of Technology<br/>
-  1200 E California Blvd<br/>
-  Pasadena, CA 91125
+  The British University in Egypt<br/>
+  Cairo<br/>
+  Egypt
 
 contact: >
-    <a href="mailto:richard@university.edu" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Richard via email</a> <br/>
-    <a href="https://github.com/sbryngelson/academic-website-template"><i class="fa fa-github fa-1x"></i> Use this site as a template!</a>
+    <a href="mailto:amgadphys@gmail.com" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Amgad via email</a> <br/>
+    <a href="https://github.com/AmgadAbdallah"><i class="fa fa-github fa-1x"></i> Use this site as a template!</a>
 
 # Pages shown in navbar
 nav_pages:
   - name: about
   - name: publications
-  - name: talks
+  - name: gallary
   - name: research
   - name: software
   - name: team
@@ -63,8 +63,8 @@ plugins: ['jekyll/scholar']
 
 scholar:
 
-  last_name: Doe
-  first_name: [John]
+  last_name: Mahmoud
+  first_name: [Amgad]
 
   style: citesty
   locale: en
