--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,2 @@
-- date: 1 January, 1941
-  headline: "Example news here"
-
-- date: 1 January, 1940
-  headline: "Example news here"
-
+- date: To be updated...
+  headline: "To be updated..."
