--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -1,6 +1,6 @@
 - name: Amgad Abdallah Mahmoud
   photo: amgad_casstle.jpeg
-  info: Amgad Abdallah . Teaching Assistant, The British University in Egypt
+  info: Amgad Abdallah. Researcher, The British University in Egypt
   email: amgadphys@gmail.com
   github: https://github.com/AmgadAbdallah
   researchgate: https://www.researchgate.net/profile/Amgad-Abdallah-2
