--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,2 @@
-- date: 
-  headline: "To be updated..."
+- date: 24th of Jan. 2024
+  headline: "Our resent ICSIE2023 conference paper, is now online!"
