--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,2 @@
-- date: 24th of Jan. 2024
-  headline: "Our resent ICSIE2023 conference paper, is now online!"
+- date: 18th of March 2024
+  headline: "Our resent article, has been ppublished on IEEE Access!"
