--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ contact: >
 nav_pages:
   - name: about
   - name: publications
-  - name: Gallary
+  - name: Gallery
   - name: research
   - name: software
   - name: team
